# Escape-Room-Code-Dump

./: .gitignore
Algorithms/RNG_All_Numbers_Neighbors_Unique/: RNG_All_Numbers_Neighbors_Unique.ino
Algorithms/RNG_XOR_Boolean_True_Array_Unique/: RNG_XOR_Boolean_True_Array_Unique.c  RNG_XOR_Boolean_True_Array_Unique.ino
Algorithms/Sequence_Methods/: Sequence_Methods.ino
Arduino/Hardware_Parts/DFMini_Player/: DFMini_Player.ino
Arduino/Puzzles/Switch_Light_Array_RNG/: 01_PuzzleFunc.ino  20_shiftRegisterIO.ino  (+2 more)
ESP-IDF/pn5180/: sdkconfig
ESP-IDF/prop_template/: README.md  sdkconfig
ESP-IDF/prop_template/components/sound/: CMakeLists.txt  sound-dummy.c  sound.c  sound.h
ESP-IDF/prop_template/components/twai_can/: CMakeLists.txt  README.md  twai_can-dummy.c  twai_can.c  twai_can.h  twai_can_half.c
ESP-IDF/sample_project/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Escape_Room_Wire_Puzzle_IO/: Escape_Room_Wire_Puzzle_IO.ino
Escape_Room_Wire_Puzzle_IO_PISO/: Escape_Room_Wire_Puzzle_IO_PISO.ino
Hardware_Parts/DFMini_Player/: DFMini_Player.ino
Hardware_Parts/Encoder_Poll/: Encoder_Poll.ino
Hardware_Parts/Shift_Register_SN74HC165N/: Shift_Register_SN74HC165N.ino
Hardware_Parts/Shift_Register_SN74HC165N_SN74HC595N/: Shift_Register_SN74HC165N_SN74HC595N.ino
Individual_Parts/Shift_Register_SN74HC165N_Demo/: Shift_Register_SN74HC165N_Demo.ino
Individual_Parts/Shift_Register_SN74HC595N_Demo/: Shift_Register_SN74HC595N_Demo.ino
NodeRed/: escape_room.json
Puzzles/Switch_Light_Array_RNG/: 01_PuzzleFunc.ino  Switch_Light_Array_RNG.ino
(+66 files in other folders)
